# scantailor-advanced

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
src/: CMakeLists.txt
src/app/: AboutDialog.ui  CMakeLists.txt
src/cli/: CLIParser.cpp  CLIParser.h  CLIRunner.cpp  CLIRunner.h  CMakeLists.txt  CmdParser.h  CmdRunner.cpp  CmdRunner.h  Debug.cpp  Debug.h  ProjectWriter.cpp  ProjectWriter.h  main.cpp
src/cli/tasks/: AbstractTask.h  DeskewTask.cpp  DeskewTask.h  FixOrientationTask.cpp  FixOrientationTask.h  LoadFileTask.cpp  LoadFileTask.h  OutputTask.cpp  OutputTask.h  PageLayoutTask.cpp  PageLayoutTask.h  PageSplitTask.cpp  PageSplitTask.h  SelectContentTask.cpp  SelectContentTask.h
src/core/: CMakeLists.txt
src/core/filters/deskew/: CMakeLists.txt
src/core/filters/fix_orientation/: CMakeLists.txt
src/core/filters/output/: CMakeLists.txt
src/core/filters/page_layout/: CMakeLists.txt
src/core/filters/page_split/: CMakeLists.txt
src/core/filters/select_content/: CMakeLists.txt  Filter.h
src/core/logger/: CMakeLists.txt  LogLevel.h  Logger.cpp  Logger.h
src/core/logger/writer/: AbstractMessageWriter.cpp  AbstractMessageWriter.h  FileMessageWriter.cpp  FileMessageWriter.h  StandardMessageWriter.cpp  StandardMessageWriter.h
src/imageproc/: CMakeLists.txt
